<resources>
    <string name="app_name">爱球君</string>
    <string name="mine">我的</string>
    <string name="forum">圈子</string>
    <string name="news">新闻</string>
    <string name="games">比赛</string>
    <string name="discover">发现</string>
    <string name="mall">商城</string>
    <string name="caipiao">彩票</string>
    <string name="bindphone">绑定手机</string>
    <string name="bindwechat">绑定微信</string>
    <string name="bindweibo">绑定微博</string>
    <string name="bindqq">绑定QQ</string>
    <string name="changepassword">修改密码</string>
    <string name="callus">联系我们</string>
    <string name="clearcache">清除缓存</string>
    <string name="noteSetting">推送通知</string>
    <string name="fontSetting">字体大小</string>
    <string name="imgSetting">2G/3G/4G无图模式</string>
    <string name="recommend">推荐给好友</string>
    <string name="advice">给个好评吧</string>
    <string name="phone_login">手机号快捷登录</string>
    <string name="password_login">帐号密码登录</string>
    <string name="write_phonenum">请输入手机号</string>
    <string name="write_nickname">请输入昵称</string>
    <string name="write_msg_code">请输入短信验证码</string>
    <string name="write_code">请输入验证码</string>
    <string name="write_password">设置6到16位数字+英文字符的密码</string>
    <string name="set_new_password">设置新密码</string>
    <string name="input_password">请输入密码</string>
    <string name="read_agree">我已阅读并同意</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_regist">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_more_forum">MoreForumActivity</string>
    <string name="title_activity_new_forum">NewForumActivity</string>
    <string name="title_activity_create_bbs">CreateBBSActivity</string>
    <string name="title_activity_type">TypeActivity</string>
    <string name="title_activity_forum_list">ForumListActivity</string>
    <string name="title_activity_bbsdetail">BBSDetailActivity</string>
    <string name="title_activity_user_display">UserDisplayActivity</string>

</resources>
