<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.kunleen.sn.sportnewsapplication.custom.TitleBarView
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_clear_cache"
            style="@style/mimecenterbt"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/clearcache"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_cachesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="0Byte"
                android:textColor="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/mimecenterbt"
            android:layout_marginTop="1dp"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/noteSetting"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/cb_set_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:button="@drawable/selector_check_notice"
                android:checked="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_font"
            style="@style/mimecenterbt"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/fontSetting"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/btn_right_on_pressed"
                android:text="中" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/mimecenterbt"
            android:layout_marginTop="1dp"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/imgSetting"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/cb_set_imgload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="-5dp"
                android:layout_marginRight="10dp"
                android:button="@drawable/selector_check_notice"
                android:checked="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_set_share"
            style="@style/mimecenterbt"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/recommend"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/mimecenterbt"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/advice"
                android:textColor="@color/black" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
