<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <com.kunleen.sn.sportnewsapplication.custom.TitleBarView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/write_phonenum" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@mipmap/button_zc_yanzhengm"
                android:gravity="center"
                android:text="获取验证码"
                android:textColor="@color/theme_green" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/write_code"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:gravity="center_vertical"
            android:paddingBottom="3dp"
            android:paddingLeft="15dp"
            android:paddingTop="3dp"
            android:text="@string/set_new_password" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/write_password"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/selector_check_password"
                android:checked="true" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/theme_green"
        android:text="确 认"
        android:textColor="@color/white" />

</LinearLayout>
