<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">

    <com.kunleen.sn.sportnewsapplication.custom.TitleBarView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_reg_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:digits="0123456789"
            android:hint="@string/write_phonenum"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_reg_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:hint="@string/write_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/cb_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:button="@drawable/selector_check_password"
                android:checked="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp">

            <EditText
                android:id="@+id/et_reg_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:digits="0123456789"
                android:hint="@string/write_msg_code"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1" />

            <TextView
                android:id="@+id/tv_reg_getcode"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:background="@mipmap/button_zc_yanzhengm"
                android:gravity="center"
                android:text="获取验证码"
                android:textColor="@color/theme_green" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/theme_green"
        android:text="提 交"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/cb_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_check"
            android:checked="true"
            android:paddingLeft="4dp"
            android:text="@string/read_agree" />

        <TextView
            android:id="@+id/tv_register_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《用户协议和隐私条款》"
            android:textColor="@color/theme_green" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
