<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.kunleen.sn.sportnewsapplication.activity.LoginActivity">

    <com.kunleen.sn.sportnewsapplication.custom.TitleBarView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/phone_login"
                android:textColor="@drawable/selector_check_font" />

            <RadioButton
                android:id="@+id/rb_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/password_login"
                android:textColor="@drawable/selector_check_font" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <EditText
            android:id="@+id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:digits="0123456789"
            android:hint="@string/write_phonenum"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp">

            <EditText
                android:id="@+id/et_login_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:digits="0123456789"
                android:hint="@string/write_msg_code"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1" />

            <Button
                android:id="@+id/btn_login_getcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:background="@mipmap/button_zc_yanzhengm"
                android:gravity="center"
                android:text="获取验证码"
                android:textColor="@color/theme_green" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1" />

            <CheckBox
                android:id="@+id/cb_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:button="@drawable/selector_check_password"
                android:checked="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/theme_green"
            android:text="登 录"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@mipmap/icon_dl_dsfdl" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_login_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:drawableTop="@mipmap/button_sz_fxweixin"
                android:gravity="center"
                android:text="微信"
                android:textColor="@color/font_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_login_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/button_sz_fxqq"
                android:gravity="center"
                android:text="QQ"
                android:textColor="@color/font_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_login_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:drawableTop="@mipmap/button_sz_fxweibo"
                android:gravity="center"
                android:text="微博"
                android:textColor="@color/font_color"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white" />
</LinearLayout>
