<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <com.kunleen.sn.sportnewsapplication.custom.TitleBarView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_change_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rl_clear_cache"
            style="@style/mimecenterbt"
            android:layout_marginTop="10dp"
            android:padding="0dp">

            <EditText
                android:id="@+id/et_change_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:hint="@string/write_nickname"
                android:maxLength="40"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp" />

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:padding="3dp"
                android:src="@mipmap/button_grzl_shanchu"
                android:textColor="@color/gray" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:text="4～40字符，可由中英文、数字组成"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bind_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_bind_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:digits="0123456789"
            android:hint="@string/write_phonenum"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp">

            <EditText
                android:id="@+id/et_bind_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:digits="0123456789"
                android:hint="@string/write_msg_code"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1" />

            <TextView
                android:id="@+id/btn_bind_getcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:background="@mipmap/button_zc_yanzhengm"
                android:gravity="center"
                android:text="获取验证码"
                android:textColor="@color/theme_green" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_change"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/theme_green"
        android:text="提 交"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>
